# pico-gamer

./: .gitignore  AUDIO-DESIGN.md  AUDIT.md  BASIC-REFERENCE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  VM-SPEC.md  pico-console-project-summary.md
.cache/emscripten/: sanity.txt
.github/workflows/: deploy.yml
firmware/: build.sh  deploy.sh
firmware/audio-proto/: platformio.ini
firmware/fps-bench/: CMakeLists.txt  main.c  pico_sdk_import.cmake
firmware/vm-runner/: CMakeLists.txt  compile_game.ts  game_bytecode.h  main.cpp  platformio.ini  sh1106_dma.h
firmware/vm-runner/include/: fat12.h  fat12_format.h  flash_store.h  sh1106_dma.h
firmware/vm-runner/lib/: pico_vm
firmware/vm-runner/src/: audio_engine.cpp  audio_engine.h  fat12.c  flash_store.c  main.cpp
terminal/: PLAN.md  pico-term.ts  synth-node.ts
vm/: platformio.ini
vm/src/: main.cpp
wasm/: build.sh  wasm_api.cpp
web/: compile-game.ts  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/examples/: asteroids-encoder-test.bas  asteroids-encoder-test.game  asteroids.asm  asteroids.bas  asteroids.game  audio-test.bas  bouncing-dot.asm  bouncing-dot.bas  bouncing-dot.game  chiptune-demo.bas  chiptune-demo.game  dance-party.bas  dance-party.game  defender.bas  hello-rectangles.asm  input-test.asm  input-test.bas  invaders.bas  invaders.game  kessler.bas  managed-sprites.asm  muncher.bas  muncher.game  note-demo.bas  note-demo.game  particle-show.bas  particles.bas  scene7-chiptune.bas  scene7-chiptune.game  sfx-demo.bas  song-demo.bas  sprites.bas  (+7 more)
(+89 files in other folders)
